finish home4 for GAMES102

--- a/homeworks/project/bin/imgui_App_Editor_editor.ini
+++ b/homeworks/project/bin/imgui_App_Editor_editor.ini
@@ -15,13 +15,13 @@ Collapsed=1
 
 [Window][Game]
 Pos=0,19
-Size=1284,676
+Size=1547,878
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000A,1
 
 [Window][Scene]
-Pos=1286,19
-Size=116,676
+Pos=1549,19
+Size=32,878
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -31,20 +31,20 @@ Size=117,47
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=1404,19
-Size=211,1070
+Pos=1583,19
+Size=465,1070
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
 
 [Window][Inspector]
-Pos=1617,19
-Size=431,1070
+Pos=0,19
+Size=1547,878
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000A,0
 
 [Window][Project]
-Pos=0,697
-Size=198,392
+Pos=0,899
+Size=198,190
 Collapsed=0
 DockId=0x00000004,0
 
@@ -54,27 +54,25 @@ Size=338,157
 Collapsed=1
 
 [Window][Folder]
-Pos=200,697
-Size=1202,392
+Pos=200,899
+Size=1381,190
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Log]
-Pos=200,697
-Size=1202,392
+Pos=200,899
+Size=1381,190
 Collapsed=0
 DockId=0x00000005,1
 
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=2048,1070 Split=X
-  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=547,998 Split=Y
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1920,630 Split=X Selected=0x83199EB2
-      DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=934,693 CentralNode=1 Selected=0x83199EB2
-      DockNode  ID=0x0000000B Parent=0x00000002 SizeRef=116,693 Selected=0x18B8C0DE
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1920,366 Split=X Selected=0xE00EE972
-      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=186,303 Selected=0xE00EE972
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1127,303 Selected=0xB7722E25
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=251,998 Split=X Selected=0xF02CD328
-    DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=82,998 Selected=0x788BAA0D
-    DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=167,998 Selected=0xF02CD328
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=1581,998 Split=Y
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1920,383 Split=X Selected=0x83199EB2
+      DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=1547,693 CentralNode=1 Selected=0x83199EB2
+      DockNode  ID=0x0000000B Parent=0x00000002 SizeRef=32,693 Selected=0x18B8C0DE
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1920,83 Split=X Selected=0xE00EE972
+      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=198,303 Selected=0xE00EE972
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1381,303 Selected=0xB7722E25
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=465,998 Selected=0x788BAA0D
 
