--- a/homeworks/project/bin/imgui_App_Editor_game.ini
+++ b/homeworks/project/bin/imgui_App_Editor_game.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
 Pos=-3,-17
-Size=400,400
+Size=427,156
 Collapsed=0
 
 [Window][in game]
@@ -9,7 +9,12 @@ Size=191,48
 Collapsed=0
 
 [Window][Canvas]
-Pos=131,25
-Size=1017,608
+Pos=168,-19
+Size=1234,888
+Collapsed=0
+
+[Window][fuck]
+Pos=52,65
+Size=198,805
 Collapsed=0
 
