--- a/homeworks/project/bin/imgui_App_Editor_editor.ini
+++ b/homeworks/project/bin/imgui_App_Editor_editor.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=2048,1089
+Size=1536,801
 Collapsed=0
 
 [Window][Debug##Default]
@@ -15,13 +15,13 @@ Collapsed=1
 
 [Window][Game]
 Pos=0,19
-Size=1547,878
+Size=1018,748
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Scene]
-Pos=637,19
-Size=678,630
+Pos=1020,19
+Size=193,748
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -34,17 +34,16 @@ Collapsed=0
 Pos=1317,19
 Size=223,998
 Collapsed=0
-DockId=0x00000007,0
 
 [Window][Inspector]
-Pos=1542,19
-Size=378,998
+Pos=0,19
+Size=1018,748
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Project]
-Pos=0,651
-Size=186,366
+Pos=0,769
+Size=149,32
 Collapsed=0
 DockId=0x00000004,0
 
@@ -54,35 +53,35 @@ Size=338,157
 Collapsed=1
 
 [Window][Folder]
-Pos=188,651
-Size=564,366
+Pos=151,769
+Size=451,32
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=754,651
-Size=561,366
+Pos=604,769
+Size=609,32
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][System Controller]
-Pos=1542,19
-Size=378,998
+Pos=1215,19
+Size=321,782
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x00000009,0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,998 Split=X
-  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=547,998 Split=Y
-    DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=1920,630 Split=X Selected=0x83199EB2
-      DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=635,693 CentralNode=1 Selected=0x83199EB2
-      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=678,693 Selected=0x18B8C0DE
-    DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=1920,366 Split=X Selected=0xE00EE972
-      DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=186,303 Selected=0xE00EE972
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1127,303 Split=X Selected=0xEB0E0CFB
-        DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=564,366 Selected=0xEB0E0CFB
-        DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=561,366 Selected=0xB7722E25
-  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=251,998 Split=X Selected=0xF02CD328
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1536,782 Split=X
+  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=1213,998 Split=Y
+    DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=1920,748 Split=X Selected=0x83199EB2
+      DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=1018,693 CentralNode=1 Selected=0x83199EB2
+      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=193,693 Selected=0x18B8C0DE
+    DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=1920,32 Split=X Selected=0xE00EE972
+      DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=149,303 Selected=0xE00EE972
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1062,303 Split=X Selected=0xEB0E0CFB
+        DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=451,366 Selected=0xEB0E0CFB
+        DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=609,366 Selected=0xB7722E25
+  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=321,998 Split=X Selected=0xF02CD328
     DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=223,998 Selected=0x788BAA0D
-    DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=378,998 Selected=0xF02CD328
+    DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=378,998 Selected=0xF505E1BC
 
